align-fix

--- a/main.css
+++ b/main.css
@@ -278,7 +278,7 @@ label {
     .post {
         flex-direction: row;
         flex-wrap: nowrap;
-        align-items: flex-start;
+        align-items: stretch;
     }
     .posttext {
         order: 0;
